--- a/package.json
+++ b/package.json
@@ -17,17 +17,20 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "ethers": "^5.7.2",
     "next": "^14.2.1",
     "next-auth": "^5.0.0-beta.16",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.2.2",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@openzeppelin/contracts": "^5.0.2",
     "@types/bcrypt": "^5.0.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
